Fixed alignment of radio and checkbox inputs, project is complete

--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,8 @@
   
   .inline {
     width: unset;
-    margin: 0 0.5em 0 0;
     vertical-align: middle;
-  }
-
-  .inline{
-    display: inline; 
+    display: inline;
   }
 
   input[type="submit"] {
@@ -82,6 +78,15 @@
     min-height: 1.25rem;
     min-width: 1.25rem;
     margin: 10px 0 0 0;
-    width: 100%;
+    width: 20px;
+    vertical-align: bottom;
   } 
+
+.checkboxes{
+    padding-bottom: 2px;
+}
+
+input[type=radio]{
+    width: 20px;
+}
 
